--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "fast-glob": "^3.2.2",
     "nuxt": "^2.13.3",
     "nuxt-property-decorator": "^2.7.2",
+    "three": "^0.133.1",
     "ts-node": "^8.10.2"
   },
   "devDependencies": {
@@ -68,6 +69,7 @@
     "jest-serializer-vue": "^2.0.2",
     "jest-static-stubs": "0.0.1",
     "node-sass": "^4.14.1",
+    "nuxt-gsap-module": "^1.5.0",
     "prettier": "^2.0.5",
     "sass-loader": "^9.0.1",
     "ts-jest": "^26.1.1",
