--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "nuxt": "^2.13.3",
     "nuxt-property-decorator": "^2.7.2",
     "three": "^0.133.1",
-    "ts-node": "^8.10.2"
+    "ts-node": "^8.10.2",
+    "vue-cool-lightbox": "^2.7.4"
   },
   "devDependencies": {
     "@babel/helper-call-delegate": "^7.10.4",
