--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "author": "Gomah",
   "private": true,
   "scripts": {
-    "dev": "nuxt-ts -o",
+    "dev": "nuxt -o",
     "build": "nuxt-ts build",
     "start": " nuxt-ts start",
     "generate": "nuxt-ts generate",
     "test:lint": "eslint --ext .js,.ts,.vue --ignore-path .gitignore app/",
     "test:unit": "cross-env BABEL_ENV=test jest --coverage",
-    "test": "npm run test:lint"
+    "test": "npm run test:lint",
+    "prepare": "husky install"
   },
   "config": {
     "nuxt": {
@@ -27,53 +28,53 @@
     "not dead"
   ],
   "dependencies": {
-    "@nuxt/typescript-runtime": "^0.4.10",
-    "@nuxtjs/eslint-module": "^2.0.0",
-    "@nuxtjs/markdownit": "^1.2.9",
+    "@nuxt/typescript-runtime": "^2.1.0",
+    "@nuxtjs/eslint-module": "^3.0.2",
+    "@nuxtjs/markdownit": "^2.0.0",
     "@nuxtjs/pwa": "^3.0.0-beta.20",
     "@nuxtjs/style-resources": "^1.0.0",
-    "fast-glob": "^3.2.2",
+    "fast-glob": "^3.2.11",
     "nuxt": "^2.13.3",
     "nuxt-property-decorator": "^2.7.2",
-    "three": "^0.133.1",
-    "ts-node": "^8.10.2",
+    "three": "^0.137.5",
+    "ts-node": "^10.5.0",
     "vue-cool-lightbox": "^2.7.4"
   },
   "devDependencies": {
     "@babel/helper-call-delegate": "^7.10.4",
-    "@babel/plugin-transform-runtime": "^7.10.4",
-    "@babel/preset-env": "^7.10.4",
-    "@babel/runtime-corejs2": "^7.10.4",
-    "@commitlint/cli": "^9.0.1",
-    "@commitlint/config-conventional": "^9.0.1",
-    "@nuxt/typescript-build": "^1.0.3",
-    "@nuxtjs/tailwindcss": "^2.0.0",
-    "@types/jest": "^26.0.3",
-    "@types/node": "^14.0.14",
-    "@typescript-eslint/eslint-plugin": "^3.5.0",
-    "@typescript-eslint/parser": "^3.5.0",
-    "@vue/test-utils": "^1.0.3",
+    "@babel/plugin-transform-runtime": "^7.17.0",
+    "@babel/preset-env": "^7.16.11",
+    "@babel/runtime-corejs2": "^7.17.2",
+    "@commitlint/cli": "^16.2.1",
+    "@commitlint/config-conventional": "^16.2.1",
+    "@nuxt/typescript-build": "^2.1.0",
+    "@nuxtjs/tailwindcss": "^5.0.0-4",
+    "@types/jest": "^27.4.0",
+    "@types/node": "^17.0.17",
+    "@typescript-eslint/eslint-plugin": "^5.11.0",
+    "@typescript-eslint/parser": "^5.11.0",
+    "@vue/test-utils": "^2.0.0-rc.17",
     "babel-eslint": "^10.1.0",
-    "core-js": "2.6.9",
+    "core-js": "3.21.0",
     "cross-env": "^7.0.2",
-    "eslint": "^7.4.0",
-    "eslint-config-airbnb-typescript": "^8.0.2",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-import-resolver-webpack": "^0.12.1",
-    "eslint-plugin-import": "^2.22.0",
-    "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-vue": "^6.2.2",
+    "eslint": "^8.9.0",
+    "eslint-config-airbnb-typescript": "^16.1.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-import-resolver-webpack": "^0.13.2",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-vue": "^8.4.1",
     "eslint-plugin-vue-a11y": "^0.0.31",
-    "husky": "^4.2.5",
+    "husky": "^7.0.0",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^26.1.0",
+    "jest": "^27.5.1",
     "jest-serializer-vue": "^2.0.2",
     "jest-static-stubs": "0.0.1",
-    "node-sass": "^4.14.1",
-    "nuxt-gsap-module": "^1.5.0",
-    "prettier": "^2.0.5",
-    "sass-loader": "^9.0.1",
-    "ts-jest": "^26.1.1",
+    "nuxt-gsap-module": "^1.6.0",
+    "prettier": "^2.5.1",
+    "sass": "^1.49.7",
+    "sass-loader": "^10.1.1",
+    "ts-jest": "^27.1.3",
     "vue-jest": "^3.0.6"
   }
 }
